--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.1.2",
+    "@heroicons/react": "^1.0.5",
+    "date-fns": "^2.27.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-date-range": "^1.4.0",
+    "react-dom": "^17.0.2",
+    "tailwind-scrollbar-hide": "^1.1.6"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.2"
   }
 }
